--- a/vite-project/src/components/InformationScreen.css
+++ b/vite-project/src/components/InformationScreen.css
@@ -25,6 +25,16 @@
   color: #fff;
 }
 
+.label{
+  font-size: 1.0rem;
+  margin-bottom: 35px;
+  font-weight: 200;
+  letter-spacing: 10px;
+  font-family: serif;
+  transition: all 0.5s ease;
+  color: #fff;
+}
+
 .formArea {
   width: 100%;
   max-width: 680px;
